improve mobile responsive

--- a/site/reading-emails-app/src/styles.scss
+++ b/site/reading-emails-app/src/styles.scss
@@ -19,3 +19,26 @@
 .emailDatBg {
     background-color: #F6F6F6;
 }
+
+@media (max-width: 767px) {
+    .device-big {
+    display: none;
+    }
+    .device-small {
+    display: block;
+    }
+}
+
+@media only screen and (min-width : 768px) {
+    .device-big, .tab-content > .tab-pane {
+    display: block;
+    }
+    .device-small {
+    display: none;
+    }
+    .tab-content > .tab-pane {
+        display: block;
+    }
+}
+
+
