--- a/site/reading-emails-app/src/app/components/email-list/email-list.component.html
+++ b/site/reading-emails-app/src/app/components/email-list/email-list.component.html
@@ -73,53 +73,72 @@
     </div>
   </div>
 </div>
+  
+<ul class="nav nav-tabs device-small backList" role="tablist" [hidden]="!hasEmailSelected">
+  <li role="presentation">
+    <a href="#listEmails" class="text-decoration-none" aria-controls="listEmails" role="tab" (click)="hasEmailSelected = false"
+      data-toggle="tab">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+        <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"></path>
+      </svg>
+      Back to list
+  </a>
+  </li>
+</ul>
 
-<div class="row">
+<div class="tab-content row">
+  
+  <div role="tabpanel" class="tab-pane col-md-6 mb-3" id="listEmails" [ngClass]="{ 'active show': !hasEmailSelected }">
+    <div class="card fillDiv scrollable">
+      <div *ngFor="let email of emailList" (click)="changeSelectedEmail(email)" class="emailData emailDatBg"
+          [ngClass]="{ 'bg-primary': selectedEmail && email.id == selectedEmail.id }">
 
-  <div class="col-md-6 mb-3">
-      <div class="card fillDiv scrollable">
-        <div *ngFor="let email of emailList" (click)="changeSelectedEmail(email)" class="emailData emailDatBg"
-            [ngClass]="{ 'bg-primary': selectedEmail && email.id == selectedEmail.id }">
-
-          <div class="row">
-              <div class="col-md-1"> 
-                <svg *ngIf="!email.extraInfo" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-file envelopeIcon" viewBox="0 0 16 16">
-                  <path d="M4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H4zm0 1h8a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1z"/>
-                </svg>
-                <svg *ngIf="email.extraInfo && email.extraInfo.isRead" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-envelope-open envelopeIcon" viewBox="0 0 16 16">
-                  <path d="M8.47 1.318a1 1 0 0 0-.94 0l-6 3.2A1 1 0 0 0 1 5.4v.818l5.724 3.465L8 8.917l1.276.766L15 6.218V5.4a1 1 0 0 0-.53-.882l-6-3.2zM15 7.388l-4.754 2.877L15 13.117v-5.73zm-.035 6.874L8 10.083l-6.965 4.18A1 1 0 0 0 2 15h12a1 1 0 0 0 .965-.738zM1 13.117l4.754-2.852L1 7.387v5.73zM7.059.435a2 2 0 0 1 1.882 0l6 3.2A2 2 0 0 1 16 5.4V14a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V5.4a2 2 0 0 1 1.059-1.765l6-3.2z"/>
-                </svg>
-                <svg *ngIf="email.extraInfo && !email.extraInfo.isRead" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-envelope envelopeIcon" viewBox="0 0 16 16">
-                  <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2zm13 2.383-4.758 2.855L15 11.114v-5.73zm-.034 6.878L9.271 8.82 8 9.583 6.728 8.82l-5.694 3.44A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.739zM1 11.114l4.758-2.876L1 5.383v5.73z"/>
-                </svg>
-              </div>
-              <div class="col-md-11"> 
-                <div class="row">
-                  <div class="col-md-10"> 
-                    <small>{{email.from | emailAddresses}}</small>
-                  </div>
-                  <div class="col-md-2 text-end"> 
-                    <small>{{email.date | date:'shortDate'}}</small>
-                  </div>
+        <div class="row">
+            <div class="col-md-1"> 
+              <svg *ngIf="!email.extraInfo" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-file envelopeIcon" viewBox="0 0 16 16">
+                <path d="M4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H4zm0 1h8a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1z"/>
+              </svg>
+              <svg *ngIf="email.extraInfo && email.extraInfo.isRead" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-envelope-open envelopeIcon" viewBox="0 0 16 16">
+                <path d="M8.47 1.318a1 1 0 0 0-.94 0l-6 3.2A1 1 0 0 0 1 5.4v.818l5.724 3.465L8 8.917l1.276.766L15 6.218V5.4a1 1 0 0 0-.53-.882l-6-3.2zM15 7.388l-4.754 2.877L15 13.117v-5.73zm-.035 6.874L8 10.083l-6.965 4.18A1 1 0 0 0 2 15h12a1 1 0 0 0 .965-.738zM1 13.117l4.754-2.852L1 7.387v5.73zM7.059.435a2 2 0 0 1 1.882 0l6 3.2A2 2 0 0 1 16 5.4V14a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V5.4a2 2 0 0 1 1.059-1.765l6-3.2z"/>
+              </svg>
+              <svg *ngIf="email.extraInfo && !email.extraInfo.isRead" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-envelope envelopeIcon" viewBox="0 0 16 16">
+                <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2zm13 2.383-4.758 2.855L15 11.114v-5.73zm-.034 6.878L9.271 8.82 8 9.583 6.728 8.82l-5.694 3.44A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.739zM1 11.114l4.758-2.876L1 5.383v5.73z"/>
+              </svg>
+            </div>
+            <div class="col-md-11"> 
+              <div class="row">
+                <div class="col-md-10"> 
+                  <small>{{email.from | emailAddresses}}</small>
                 </div>
-                <div class="row">
-                  <div class="col"> 
-                    {{email.subject}}
-                  </div>
+                <div class="col-md-2 text-end"> 
+                  <small>{{email.date | date:'shortDate'}}</small>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col"> 
+                  {{email.subject}}
                 </div>
               </div>
             </div>
-        </div>
-        
-        <app-loader *ngIf="isLoadingEmails"></app-loader>
+          </div>
+      </div>
+      
+      <app-loader *ngIf="isLoadingEmails"></app-loader>
     </div>
   </div>
-
-  <div class="col-md-6 mb-3">
+  
+  <div role="tabpanel" class="tab-pane col-md-6 mb-3" id="messages" [ngClass]="{ 'active show': hasEmailSelected }">
     <div class="card fillminHeigDiv">
-
       <app-email-detail [emailData]="selectedEmail" [serveConfig]="serveConfig"></app-email-detail>
     </div>
   </div>
-
 </div>
+
+
+
+
+
+
+
+
+
