--- a/site/reading-emails-app/src/app/components/email-list/email-list.component.scss
+++ b/site/reading-emails-app/src/app/components/email-list/email-list.component.scss
@@ -4,7 +4,7 @@
     box-shadow: none;
     background: transparent;}
 .iconButton.active, .iconButton:hover{
-    color: theme-color("primary");;
+    color: theme-color("primary");
     background-color: transparent;
     box-shadow: none; 
 }
@@ -39,4 +39,8 @@
     position:fixed;
     overflow-y:scroll;
     overflow-x:hidden;
+}
+
+.backList {
+    padding: 5px 5px 5px 10px;
 }
