--- a/site/reading-emails-app/src/app/components/email-list/email-list.component.html
+++ b/site/reading-emails-app/src/app/components/email-list/email-list.component.html
@@ -63,8 +63,12 @@
               </div>
               <div class="col-md-4"> 
                 <div class="card-body text-end" >
-                  <button type="submit" class="btn btn-primary marginButton">Start</button>
-                  <button type="button" class="btn btn-secondary" (click)="onReset()">Reset</button>
+                  <button type="submit" class="btn btn-primary marginButton" [disabled]="isLoadingEmails">
+                    <span *ngIf="isLoadingEmails" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                    <span class="ml-5" *ngIf="isLoadingEmails">loading...</span>
+                    <span *ngIf="!isLoadingEmails">Start</span>
+                  </button>
+                  <button type="button" class="btn btn-secondary" (click)="onReset()" [disabled]="isLoadingEmails">Reset</button>
                 </div>
               </div>
             </div>
