--- a/site/reading-emails-app/src/app/components/email-list/email-list.component.html
+++ b/site/reading-emails-app/src/app/components/email-list/email-list.component.html
@@ -51,28 +51,25 @@
             </div>
          
             <div class="row">
-              <div class="col-md-8"> 
-                <div class="card-body text-start" *ngIf="errorMessages.length > 0">
-                  <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                    <ul>
-                      <li *ngFor="let message of errorMessages">{{message}}</li>
-                    </ul>
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close" (click)="removeAlertError()"></button>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-4"> 
-                <div class="card-body text-end" >
-                  <button type="submit" class="btn btn-primary marginButton" [disabled]="isLoadingEmails">
-                    <span *ngIf="isLoadingEmails" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-                    <span class="ml-5" *ngIf="isLoadingEmails">loading...</span>
-                    <span *ngIf="!isLoadingEmails">Start</span>
-                  </button>
-                  <button type="button" class="btn btn-secondary" (click)="onReset()" [disabled]="isLoadingEmails">Reset</button>
+              <div class="card-body text-start" *ngIf="errorMessages.length > 0">
+                <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                  <ul>
+                    <li *ngFor="let message of errorMessages">{{message}}</li>
+                  </ul>
+                  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close" (click)="removeAlertError()"></button>
                 </div>
               </div>
             </div>
-            
+            <div class="row">
+              <div class="card-body text-end" >
+                <button type="submit" class="btn btn-primary marginButton" [disabled]="isLoadingEmails">
+                  <span *ngIf="isLoadingEmails" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                  <span class="ml-5" *ngIf="isLoadingEmails">loading...</span>
+                  <span *ngIf="!isLoadingEmails">Start</span>
+                </button>
+                <button type="button" class="btn btn-secondary" (click)="onReset()" [disabled]="isLoadingEmails">Reset</button>
+              </div>
+            </div>            
         </form>
     </div>
   </div>
