--- a/site/reading-emails-app/src/app/components/email-list/email-list.component.html
+++ b/site/reading-emails-app/src/app/components/email-list/email-list.component.html
@@ -61,13 +61,17 @@
               </div>
             </div>
             <div class="row">
-              <div class="card-body text-end" >
+              <div class="card-body text-end flex">
                 <button type="submit" class="btn btn-primary marginButton" [disabled]="isLoadingEmails">
                   <span *ngIf="isLoadingEmails" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                   <span class="ml-5" *ngIf="isLoadingEmails">loading...</span>
                   <span *ngIf="!isLoadingEmails">Start</span>
                 </button>
                 <button type="button" class="btn btn-secondary" (click)="onReset()" [disabled]="isLoadingEmails">Reset</button>
+                <button class="btn iconButton" type="button" 
+                  data-toggle="collapse" data-target="#configurationForm" aria-expanded="false" aria-controls="configurationForm">
+                  <i class="bi bi-chevron-up" (click)="showConfiguration = !showConfiguration"></i>
+                </button>
               </div>
             </div>            
         </form>
